fix:metadata of schema

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nexa Evolve",
-  "name": "Nexa Evolve",
+  "short_name": "Scheduler Pro",
+  "name": "Scheduler Pro",
   "icons": [
     {
       "src": "favicon.ico",
